--- a/static/styles/pink-style.scss
+++ b/static/styles/pink-style.scss
@@ -72,6 +72,11 @@ a {
 
 .startp-nav {
     nav {
+        a.navbar-brand{
+            img{
+                max-width: 169px;
+            }
+        }
         .navbar-nav {
             .nav-item {
                 a {
